--- a/src/app/property/property-detail/property-detail.component.html
+++ b/src/app/property/property-detail/property-detail.component.html
@@ -1,2 +1,10 @@
 <p>property-detail works!</p>
+
 <h2>You have selected the property of {{propertyId}}</h2>
+<br/><br/>
+<button (click)="onSelectNext()" class="btn btn-primary">Select Next</button>
+<br/><br/>
+<button routerLink="/detail-property/1" class="btn btn-primary">1</button>
+<button routerLink="/detail-property/2" class="btn btn-primary">2</button>
+<button routerLink="/detail-property/3" class="btn btn-primary">3</button>
+<button [routerLink]="['/detail-property/', 4]" class="btn btn-primary">4</button>
