--- a/src/app/user/user-register/user-register.component.html
+++ b/src/app/user/user-register/user-register.component.html
@@ -9,14 +9,14 @@
           <div class="form-group col-12">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" formControlName="userName">
-            <span *ngIf="!userName.valid && userName.touched" class="error-block">
+            <span *ngIf="!userName.valid && (userName.touched || formIsSubmitted)" class="error-block">
               Please provide name</span>
           </div>
 
           <div class="form-group col-12">
             <label for="email" class="form-label">Email</label>
             <input type="text" class="form-control" formControlName="email">
-            <span *ngIf="!email.valid && email.touched" class="error-block">
+            <span *ngIf="!email.valid && (email.touched || formIsSubmitted)" class="error-block">
               <span *ngIf="email.hasError('required')">
                 Please provide email id
               </span>
@@ -29,7 +29,7 @@
           <div class="form-group col-12">
             <label for="passwrod" class="form-label">Password</label>
             <input type="password" class="form-control" formControlName="password">
-            <span *ngIf="!password.valid && password.touched" class="error-block">
+            <span *ngIf="!password.valid && (password.touched || formIsSubmitted)" class="error-block">
               <span *ngIf="password.errors['required']">
                 Please provide password
               </span>
@@ -42,7 +42,7 @@
           <div class="form-group col-12">
             <label for="cpassword" class="form-label">Confirm Password</label>
             <input type="password" class="form-control" formControlName="confirmPassword">
-            <span *ngIf="!confirmPassword.valid && confirmPassword.touched" class="error-block">
+            <span *ngIf="!confirmPassword.valid && (confirmPassword.touched || formIsSubmitted)" class="error-block">
               <span *ngIf="confirmPassword.errors['required']">
                 Please provide password
               </span>
@@ -55,7 +55,7 @@
           <div class="form-group col-12">
             <label for="mobile" class="form-label">Mobile</label>
             <input type="text" class="form-control" formControlName="mobile">
-           <span *ngIf="!mobile.valid && mobile.touched" class="error-block">
+           <span *ngIf="!mobile.valid && (mobile.touched || formIsSubmitted)" class="error-block">
               <span *ngIf="mobile.errors['required']">
                 Provide mobile
               </span>
@@ -69,8 +69,6 @@
             <button type="submit" class="btn btn-primary">Save</button>
             <button type="reset" class="btn btn-secondary ml-2">Cancel</button>
           </div>
-          Form Values: {{registerationForm.value | json}} <br>
-          Form Status: {{registerationForm.valid}}
         </form>
       </div>
     </div>
