--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -18,12 +18,30 @@
     </ul>
 <div>
   <ul class="nav navbar-nav">
-    <li class="nav-item">
+    <li *ngIf="!loggedin()" class="nav-item">
       <a class="nav-link" routerLinkActive="active" routerLink="user/register">Register</a>
     </li>
-    <li class="nav-item">
+    <li *ngIf="!loggedin()" class="nav-item">
       <a class="nav-link" routerLinkActive="active" routerLink="user/login">Login</a>
     </li>
+    <!-- <li *ngIf="loggedin()" class="nav-item">
+      <a class="nav-link" routerLinkActive="active" (click)="logout()">Log out</a>
+    </li> -->
+    <div *ngIf="loggedin()" class="dropdown mr-5" dropdown>
+      <a href="#" class="dropdown-toggle text-light" dropdownToggle (click)="false">
+        Welcome {{userLoggedin}}
+      </a>
+      <div class="dropdown-menu" *dropdownMenu>
+        <a href="#" class="dropdown-item">
+          <i class="fas fa-tachometer-alt"></i> View Dashboard</a>
+          <a href="#" class="dropdown-item">
+            <i class="fa fa-user-circle"></i> My Profile</a>
+            <a href="#" class="dropdown-item">
+              <i class="fa fa-key"></i> Change Password</a>
+              <a (click)="logout()" class="dropdown-item">
+                <i class="fas fa-sign-out-alt"></i> Logout</a>
+      </div>
+    </div>
   </ul>
 </div>
   </div>
