--- a/src/app/property/add-property/add-property.component.html
+++ b/src/app/property/add-property/add-property.component.html
@@ -1,29 +1,205 @@
+<div class="row mb-5">
+  <div class="col-8">
 <div class="card">
   <div class="card-header">
-    Add New Property
+    <h3>Add New Property</h3>
   </div>
   <div class="card-body">
-    <form (ngSubmit)="onSubmit()" #Form = "ngForm">
-      <div class="form-goup col-12">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" required minlength="5">
-        <span *ngIf="!propName.valid && propName.touched" class="error-block">
-          <span *ngIf="propName.errors.required">Please provide name</span>
-          <span *ngIf="propName.errors.minlength">Name must be atleast 5 char long</span>
-        </span>
-      </div>
-      <div class="form-goup col-12">
-        <label for="type">Type</label>
-        <input type="text" class="form-control" ngModel name="PType">
-      </div>
-      <div class="form-goup col-12">
-        <label for="price">Price</label>
-        <input type="text" class="form-control" ngModel name="Price">
-      </div>
-      <div class="form-goup col-12 p-2">
-      <button type="submit" class="btn btn-primary mr-2">Save</button>
-      <button type="reset" class="btn btn-primary">Cancel</button>
+    <form (ngSubmit)="onSubmit()" #Form="ngForm">
+
+      <div>
+        <tabset #FormTabs>
+          <tab heading="Basic Info">
+            <div class="form-roup col-12">
+              <p>I want to</p>
+              <div class="btn-group" btnRadioGroup>
+                <label class="btn btn-outline-primary mr-2" btnRadio="1" role="button" name="SellRent">Sell</label>
+                <label class="btn btn-outline-primary mr-2" btnRadio="2" role="button" name="SellRent">Rent</label>
+              </div>
+            </div>
+            <div class="form-roup col-12">
+              <p>BHK</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let bhk of ['1','2','3','4']" class="btn btn-outline-primary mr-2" [btnRadio]="bhk" tabindex="0"
+                  role="button" name="SellRent">{{bhk}}</label>
+              </div>
+            </div>
+
+            <div class="form-roup col-12">
+              <p>Property Type</p>
+              <div class="btn-group" btnRadioGroup name='propertyType'
+              [(ngModel)]="propertyView.PType">
+                <label *ngFor="let pType of propertyTypes" class="btn btn-outline-primary mr-2" [btnRadio]="pType" tabindex="0"
+                  role="button" name="SellRent">{{pType}}</label>
+              </div>
+            </div>
+
+            <div class="form-roup col-12">
+              <p>Furnishing Type</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let fType of furnishTypes" class="btn btn-outline-primary mr-2" [btnRadio]="fType" tabindex="0"
+                  role="button" name="SellRent">{{fType}}</label>
+              </div>
+            </div>
+
+            <div class="form-goup col-12">
+              <label for="name">in Building/Society/Project</label>
+              <input type="text" class="form-control" #propName="ngModel" ngModel name="Name"
+              required minlength="5"
+              [(ngModel)]="propertyView.Name">
+              <span *ngIf="!propName.valid && propName.touched" class="error-block">
+                <span *ngIf="propName.errors.required">Please provide name</span>
+                <span *ngIf="propName.errors.minlength">Name must be atleast 5 char long</span>
+              </span>
+            </div>
+            <div class="form-goup col-12">
+              <label for="type">Type</label>
+              <input type="text" class="form-control" ngModel name="PType">
+            </div>
+            <div class="form-goup col-12">
+              <label for="price">City</label>
+              <input type="text" class="form-control">
+            </div>
+            <div class="form-goup col-12 p-2">
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Next</button>
+            </div>
+          </tab>
+          <tab heading="Pricing and Area">
+            <div class="form-group col-12">
+              <label>Price (in USD)</label>
+              <input type="text" class="form-control" name='Price'
+              [(ngModel)]="propertyView.Price">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Security (in USD)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Maintenance (in USD)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Built Area (in Sqr Feet)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Carpet Area(in Sqr Feet)</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(2)">Next</button>
+
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(0)">Back</button>
+            </div>
+          </tab>
+
+          <tab heading="Address">
+
+            <div class="form-group col-12">
+              <label>Floor</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Total Floor</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Address</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Landmark</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(3)">Next</button>
+
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Back</button>
+            </div>
+          </tab>
+
+          <tab heading="Other Details">
+
+            <div class="form-roup col-12">
+              <p>Ready to Move</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let moveType of readyToMove" class="btn btn-outline-primary mr-2" [btnRadio]="moveType" tabindex="0"
+                  role="button" name="SellRent">{{moveType}}</label>
+              </div>
+            </div>
+
+            <div class="form-group col-3">
+              <label>Possession/Avaialble From</label>
+              <input type="date" class="form-control">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Age of Property</label>
+              <input type="text" class="form-control">
+            </div>
+
+            <div class="form-roup col-12">
+              <p>Gated Community</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let gCommType of gatedCommunity" class="btn btn-outline-primary mr-2" [btnRadio]="gCommType" tabindex="0"
+                  role="button" name="SellRent">{{gCommType}}</label>
+              </div>
+            </div>
+
+            <div class="form-roup col-12">
+              <p>Main Entrance</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let mainEntranceType of mainEntrance" class="btn btn-outline-primary mr-2" [btnRadio]="mainEntranceType" tabindex="0"
+                  role="button" name="SellRent">{{mainEntranceType}}</label>
+              </div>
+            </div>
+
+            <div class="form-group col-12">
+              <label>Description</label>
+              <textarea type="text" class="form-control" rows="6"></textarea>
+            </div>
+
+            <div class="form-group col-12">
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(4)">Next</button>
+
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(2)">Back</button>
+            </div>
+          </tab>
+
+          <tab heading="Photos">
+            <div class="form-group col-12">
+              <div class="photo-control">
+                <button class="mt-5" type="button">Upload</button> <br>
+                This is under construction
+              </div>
+            </div>
+            <div class="form-group col-12">
+              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(3)">Back</button>
+              <button type="reset" class="btn btn-primary btn-block">Cancel</button>
+              <button type="submit" class="btn btn-primary btn-block">Save</button>
+            </div>
+          </tab>
+        </tabset>
       </div>
     </form>
   </div>
+</div>
+</div>
+<div class="col-4">
+  <div class="card-header">
+    <h3>Your Property Preview</h3>
+  </div>
+  <div class="card-body">
+   <app-property-card [property]="propertyView"></app-property-card>
+  </div>
+</div>
 </div>
